@@ -1,3 +1,12 @@
-The OpenShift `diy` cartridge documentation can be found at:
+Extends traditional content management systems with semantic services. Other feasible use cases include: direct usage from web applications (e.g. for tag extraction/suggestion; or text completion in search fields), 'smart' content workflows or email routing based on extracted entities, topics, etc.
 
-http://openshift.github.io/documentation/oo_cartridge_guide.html#diy
+To start:
+
+    java -Xmx1024m -XX:MaxPermSize=256M -jar \
+        target/org.apache.stanbol.launchers.full-*-SNAPSHOT.jar
+
+So that you can POST content using, for example:
+
+% curl -X POST -H "Accept: text/turtle" -H "Content-type: application/ld+json" \
+     --data "The Stanbol enhancer can detect famous cities such as Paris and people such as Bob Marley." \
+     http://standbol.teode-6/enhancer
